Corrected header/footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,18 +37,18 @@
           </li>
         </ul>
 
-        <ul class="contact-nav list">
+         <ul class="contact-nav list">
           <li class="list-item">
-            <a href="mailto:info@devstudio.com" class="nav-link nav-icons">
-              <svg class="icon-email" width="16" height="16">
+            <a href="mailto:info@devstudio.com" class="nav-link contact-icons">
+              <svg class="contact-icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a class="nav-link nav-icons" href="tel:+380961111111">
-              <svg class="icon-phone" width="10" height="16">
+            <a class="nav-link contact-icons" href="tel:+380961111111">
+              <svg class="contact-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -238,29 +238,29 @@
           <p class="join">Приєднуйтесь</p>
           <ul class="list social-links">
             <li class="social-link">
-              <a href="" class="icons transparent">
-                <svg class="icon white">
+              <a href="" class="social-icons icons-footer">
+                <svg class="social-icon icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" class="icons transparent">
-                <svg class="icon">
+              <a href="" class="social-icons icons-footer">
+                <svg class="social-icon icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" class="icons transparent">
-                <svg class="icon">
+              <a href="" class="social-icons icons-footer">
+                <svg class="social-icon icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" class="icons transparent">
-                <svg class="icon">
+              <a href="" class="social-icons icons-footer">
+                <svg class="social-icon icon-footer" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
