--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,24 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Домашнє завдання 3</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -15,7 +28,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="css/styles.css"
+    />
   </head>
 
   <body>
@@ -23,33 +39,62 @@
     <header class="page-header">
       <nav class="container main-nav">
         <a class="logo" href="/">
-          <span class="logo-accent">Web</span>Studio
+          <span class="logo-accent">Web</span
+          >Studio
         </a>
         <ul class="site-nav list">
           <li class="list-item">
-            <a class="nav-link" href="./index.html">Студія</a>
+            <a
+              class="nav-link"
+              href="./index.html"
+              >Студія</a
+            >
           </li>
           <li class="list-item">
-            <a class="nav-link current" href="./portfolio.html">Портфоліо</a>
+            <a
+              class="nav-link current"
+              href="./portfolio.html"
+              >Портфоліо</a
+            >
           </li>
           <li class="list-item">
-            <a class="nav-link" href="#">Контакти</a>
+            <a class="nav-link" href="#"
+              >Контакти</a
+            >
           </li>
         </ul>
 
-         <ul class="contact-nav list">
+        <ul class="contact-nav list">
           <li class="list-item">
-            <a href="mailto:info@devstudio.com" class="nav-link contact-icons">
-              <svg class="contact-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-email"></use>
+            <a
+              href="mailto:info@devstudio.com"
+              class="nav-link contact-icons"
+            >
+              <svg
+                class="contact-icon"
+                width="16"
+                height="16"
+              >
+                <use
+                  href="./images/icons.svg#icon-email"
+                ></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a class="nav-link contact-icons" href="tel:+380961111111">
-              <svg class="contact-icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-phone"></use>
+            <a
+              class="nav-link contact-icons"
+              href="tel:+380961111111"
+            >
+              <svg
+                class="contact-icon"
+                width="10"
+                height="16"
+              >
+                <use
+                  href="./images/icons.svg#icon-phone"
+                ></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -65,19 +110,44 @@
           <h1 hidden>Наші роботи</h1>
           <ul class="list btn-list">
             <li class="item">
-              <button class="button" type="button">Усі</button>
+              <button
+                class="button"
+                type="button"
+              >
+                Усі
+              </button>
             </li>
             <li class="item">
-              <button class="button" type="button">Веб-сайти</button>
+              <button
+                class="button"
+                type="button"
+              >
+                Веб-сайти
+              </button>
             </li>
             <li class="item">
-              <button class="button" type="button">Додатки</button>
+              <button
+                class="button"
+                type="button"
+              >
+                Додатки
+              </button>
             </li>
             <li class="item">
-              <button class="button" type="button">Дизайн</button>
+              <button
+                class="button"
+                type="button"
+              >
+                Дизайн
+              </button>
             </li>
             <li class="item">
-              <button class="button" type="button">Маркетинг</button>
+              <button
+                class="button"
+                type="button"
+              >
+                Маркетинг
+              </button>
             </li>
           </ul>
 
@@ -91,7 +161,11 @@
               />
               <div class="work-info">
                 <h2 class="work-title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                  Постер
+                  <span lang="en"
+                    >New Orlean vs Golden
+                    Star</span
+                  >
                 </h2>
                 <p class="work-kind">Дизайн</p>
               </div>
@@ -105,7 +179,8 @@
               />
               <div class="work-info">
                 <h2 class="work-title">
-                  Ресторан <span lang="en">Seafood</span>
+                  Ресторан
+                  <span lang="en">Seafood</span>
                 </h2>
                 <p class="work-kind">Додаток</p>
               </div>
@@ -119,7 +194,10 @@
                 width="370"
               />
               <div class="work-info">
-                <h2 class="work-title">Проєкт <span lang="en">Prime</span></h2>
+                <h2 class="work-title">
+                  Проєкт
+                  <span lang="en">Prime</span>
+                </h2>
                 <p class="work-kind">Маркетинг</p>
               </div>
             </li>
@@ -131,7 +209,10 @@
                 width="370"
               />
               <div class="work-info">
-                <h2 class="work-title">Проєкт <span lang="en">Boxes</span></h2>
+                <h2 class="work-title">
+                  Проєкт
+                  <span lang="en">Boxes</span>
+                </h2>
                 <p class="work-kind">Додаток</p>
               </div>
             </li>
@@ -143,7 +224,9 @@
                 width="370"
               />
               <div class="work-info">
-                <h2 class="work-title" lang="en">Inspiration has no Borders</h2>
+                <h2 class="work-title" lang="en">
+                  Inspiration has no Borders
+                </h2>
                 <p class="work-kind">Веб-сайт</p>
               </div>
             </li>
@@ -156,7 +239,10 @@
               />
               <div class="work-info">
                 <h2 class="work-title">
-                  Видання <span lang="en">Limited Edition</span>
+                  Видання
+                  <span lang="en"
+                    >Limited Edition</span
+                  >
                 </h2>
                 <p class="work-kind">Дизайн</p>
               </div>
@@ -169,7 +255,10 @@
                 width="370"
               />
               <div class="work-info">
-                <h2 class="work-title">Проєкт <span lang="en">LAB</span></h2>
+                <h2 class="work-title">
+                  Проєкт
+                  <span lang="en">LAB</span>
+                </h2>
                 <p class="work-kind">Маркетинг</p>
               </div>
             </li>
@@ -181,7 +270,9 @@
                 width="370"
               />
               <div class="work-info">
-                <h2 class="work-title">Технокряк</h2>
+                <h2 class="work-title">
+                  Технокряк
+                </h2>
                 <p class="work-kind">Веб-сайт</p>
               </div>
             </li>
@@ -193,7 +284,9 @@
                 width="370"
               />
               <div class="work-info">
-                <h2 class="work-title" lang="en">Growing Business</h2>
+                <h2 class="work-title" lang="en">
+                  Growing Business
+                </h2>
                 <p class="work-kind">Додаток</p>
               </div>
             </li>
@@ -208,7 +301,9 @@
         <div class="footer-nav">
           <a class="logo-footer" href="/">
             <span class="logo-accent">Web</span
-            ><span class="logo-white">Studio</span></a
+            ><span class="logo-white"
+              >Studio</span
+            ></a
           >
           <address>
             <ul class="list">
@@ -218,16 +313,22 @@
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  >г. Киев, пр-т Леси Украинки, 26</a
+                  >г. Киев, пр-т Леси Украинки,
+                  26</a
                 >
               </li>
               <li class="footer-link">
-                <a class="link-email" href="mailto:info@devstudio.com" lang="en"
+                <a
+                  class="link-email"
+                  href="mailto:info@devstudio.com"
+                  lang="en"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="footer-link">
-                <a class="link-phone" href="tel:+380961111111"
+                <a
+                  class="link-phone"
+                  href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -238,30 +339,66 @@
           <p class="join">Приєднуйтесь</p>
           <ul class="list social-links">
             <li class="social-link">
-              <a href="" class="social-icons icons-footer">
-                <svg class="social-icon icon-footer" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+              <a
+                href=""
+                class="social-icons icons-footer"
+              >
+                <svg
+                  class="social-icon icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use
+                    href="./images/icons.svg#icon-instagram"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" class="social-icons icons-footer">
-                <svg class="social-icon icon-footer" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+              <a
+                href=""
+                class="social-icons icons-footer"
+              >
+                <svg
+                  class="social-icon icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use
+                    href="./images/icons.svg#icon-twitter"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" class="social-icons icons-footer">
-                <svg class="social-icon icon-footer" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
+              <a
+                href=""
+                class="social-icons icons-footer"
+              >
+                <svg
+                  class="social-icon icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use
+                    href="./images/icons.svg#icon-facebook"
+                  ></use>
                 </svg>
               </a>
             </li>
             <li class="social-link">
-              <a href="" class="social-icons icons-footer">
-                <svg class="social-icon icon-footer" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
+              <a
+                href=""
+                class="social-icons icons-footer"
+              >
+                <svg
+                  class="social-icon icon-footer"
+                  width="20"
+                  height="20"
+                >
+                  <use
+                    href="./images/icons.svg#icon-linkedin"
+                  ></use>
                 </svg>
               </a>
             </li>
