Added mentors edits
Footer /join block

--- a/portfolio.html
+++ b/portfolio.html
@@ -342,6 +342,7 @@
               <a
                 href=""
                 class="social-icons icons-footer"
+                rel="noopener noreferrer nofollow"
               >
                 <svg
                   class="social-icon icon-footer"
@@ -358,6 +359,7 @@
               <a
                 href=""
                 class="social-icons icons-footer"
+                rel="noopener noreferrer nofollow"
               >
                 <svg
                   class="social-icon icon-footer"
@@ -374,6 +376,7 @@
               <a
                 href=""
                 class="social-icons icons-footer"
+                rel="noopener noreferrer nofollow"
               >
                 <svg
                   class="social-icon icon-footer"
@@ -390,6 +393,7 @@
               <a
                 href=""
                 class="social-icons icons-footer"
+                rel="noopener noreferrer nofollow"
               >
                 <svg
                   class="social-icon icon-footer"
